--- a/style.css
+++ b/style.css
@@ -162,7 +162,13 @@ section img {
     font-size: 1.3em; 
 }
 
-
+#about img {
+    width: 100%; 
+    height: auto;
+    display: block;
+    margin: 20px 0;
+    border-radius: 8px;
+}
 
 /* text */
 a {
@@ -194,17 +200,28 @@ p{
 
 /* footer */
 .footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
     background-color: #edc3c3;
-    color: #f3f3f3;
-    text-align: left;
+    color: #f0687f;
+    text-align: center; 
     position: relative;
     bottom: 0;
     font-size: 15px;
     line-height: 1.8;
     margin-top: 100px;
-    padding: 40px;
-    color: #f0687f;
+    padding: 50px;
+    flex-wrap: wrap;
 }
+
+.footer a, .footer p {
+    color: #f0687f; 
+    margin: 0 10px; 
+    text-decoration: none;
+}
+
 
 @media (max-width: 768px) and (min-width: 320px){
     nav ul li {
@@ -257,5 +274,12 @@ p{
         align-items: center;
         padding: 10px;
         font-size: smaller;
+    }
+
+    .footer {
+        flex-direction: column;
+    }
+    .footer a, .footer p {
+        margin: 10px 0; 
     }
 }
